--- a/Minimo/Minimo/stylee.css
+++ b/Minimo/Minimo/stylee.css
@@ -244,6 +244,10 @@ img {
   padding-bottom: 30px;
 }
 
+.also-links {
+  margin: 0px 0px 35px 0px;
+}
+
 #italic {
   padding: 0px 20px 30px 20px;
   font-style: italic;
@@ -415,7 +419,7 @@ footer p, footer a {
 }
 
 .comment-title {
-  margin-top: 30px;
+  margin: 30px 0px 25px 0px;
 }
 
 .comments img {
@@ -512,7 +516,7 @@ footer p, footer a {
   margin: auto;
 }
 
-.also-container p {
+.also-title {
   font-size: 14px;
   font-family: Ubuntu;
   color: #b4ad9e;
@@ -521,13 +525,12 @@ footer p, footer a {
 }
 
 .also-posts {
-  margin: 0px 0px 30px 0px;
   display: flex;
   flex-flow: column;
   align-items: flex-start;
 }
 
-.also-posts a {
+.also-posts p {
   font-family: PlayfairDisplay;
   font-size: 14px;
   margin: 20px 0px 0px 0px;
@@ -536,7 +539,7 @@ footer p, footer a {
 
 /* ---------------------- media 870 ---------------------- */
 
-@media only screen and (min-width: 886px) {
+@media only screen and (min-width: 900px) {
   h3, .photodiary a, .full-photodiary a {
     font-size: 14px;
   }
@@ -821,7 +824,7 @@ footer p, footer a {
     padding: 0px 0px 75px 0px;
   }
 
-  .also-container p {
+  .also-title {
     font-size: 14px;
     font-family: Ubuntu;
     color: #b4ad9e;
@@ -829,11 +832,11 @@ footer p, footer a {
     margin: 65px 0px 35px 0px;
   }
 
-  .also-posts {
+  .also-links {
     margin: 0px 0px 85px 0px;
   }
 
-  .also-posts a {
+  .also-posts p {
     font-size: 20px;
     margin: 20px 0px 0px 0px;
   }
