--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -1,7 +1,7 @@
 extends parts/layout.pug
 
+block content 
+  h1 Trang chủ 26/01
+
 block title
   title Trang chủ
-
-block content 
-  h1 Trang chủ nè
