--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -12,16 +12,24 @@ html(lang="en")
 
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1' crossorigin='anonymous')
 
+    link(rel='stylesheet' type='text/css' href="/slick/slick.css")
+
+    link(rel='stylesheet' type='text/css' href="/slick/slick-theme.css")
+
     link(rel="stylesheet", href="css/layout.css")
+
+    block css
 
     block title
       title Demo
+
       
   body
     
     include header.pug
 
-    block content
+    main
+      block content
 
     include footer.pug
 
@@ -32,6 +40,8 @@ html(lang="en")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
 
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
+
+    script(type='text/javascript' src='//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js')
 
     script(src='js/script.js')
 
