--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -1,6 +1,6 @@
 header
   nav.navbar.navbar-expand-md.bg-dark.navbar-dark
-    .container
+    .container.px-4
       .hamburger-wrapper
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#collapsibleNavbar')
           span.navbar-toggler-icon
