--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -1,19 +1,150 @@
 
-.main-carousel.single-item
+#main-carousel.carousel.slide(data-ride='carousel' data-interval='false' data-touch="true")
+
+  //indicators: 3 nút định vị trang
+  ul.carousel-indicators
+    li.active(data-target='#main-carousel' data-slide-to='0')
+    li(data-target='#main-carousel' data-slide-to='1')
+    li(data-target='#main-carousel' data-slide-to='2')
+
+  //nội dung carousel
+  .carousel-inner
+
+    .carousel-item.banner-1.active
+
+      .carousel-caption
+        .carousel-caption-text
+          h1.big-title.font-weight-bold Tiêu điểm tháng 1
+
+          .logo-wrapper-1
+            p.canon-logo Canon
+            p.eos-r EOS R
+            .progress(style='width:90px; height: 5px')
+              .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
+
+
+          p.carousel-header.font-italic
+            | ĐỊNH NGHĨA LẠI 
+            br
+            |  CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
+
+
+          button.white-btn.btn.btn-outline-light.text-light.see-more-btn(type='button') Xem chi tiết
+
+        img.carousel-caption-banner-xs(src="img/carousel-img/eos-r-main-banner-xs.png" alt="")
+
+        .carousel-caption-extra
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-1.png", alt="")
+            p.extra-text LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS 
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-2.png", alt="")
+            p.extra-text TỐI ƯU HÓA ĐIỀU KHIỂN 
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-3.png", alt="")
+            p.extra-text QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K
+
+    .carousel-item.banner-2
+      .carousel-caption
+        .carousel-caption-text
+          h1.big-title.font-weight-bold Tiêu điểm tháng 1
+
+          .logo-wrapper-2
+            .logo-only
+              p.sony-logo SONY
+
+              img.a9-logo(src="img/carousel-img/alpha-logos.png", alt="")
+
+            .progress(style='width: 90px; height: 5px')
+              .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
+
+
+          p.carousel-header.font-italic
+            | SỰ HOÀN HẢO
+            br
+            |  CHƯA BAO GIỜ GẦN ĐẾN VẬY
+
+
+          button.white-btn.btn.btn-outline-light.text-light.see-more-btn(type='button') Xem chi tiết
+
+        img.carousel-caption-banner-xs(src="img/carousel-img/a9-main-banner-xs-v3.png" alt="")
+
+        .carousel-caption-extra
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-1.png", alt="") 
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-2.png", alt="")
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-3.png", alt="")
+
+    .carousel-item.banner-3
+      .carousel-caption
+        .carousel-caption-text
+          h1.big-title.font-weight-bold Tiêu điểm tháng 1
+
+          .logo-wrapper-3
+            p.sony-logo SONY
+            span.collab
+              i.fas.fa-times
+            img.lotr-logo(src="img/carousel-img/lotr-logo.png", alt="")
+
+          p.carousel-header.font-italic
+            | MỘT NGÀM CHO TẤT CẢ
+            br
+            |  Kết nối mọi thứ với ngàm E-mount của 
+            span.sony-logo SONY
+
+
+          button.white-btn.btn.btn-outline-light.text-light.see-more-btn(type='button') Xem chi tiết
+
+        img.carousel-caption-banner-xs(src="img/carousel-img/e-mount-banner-xs-v3.png" alt="")
+
+        .carousel-caption-extra
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-1.png", alt="") 
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-2.png", alt="")
+          .extra
+            img.extra-img(src="img/misc-img/carousel-1-extra-3.png", alt="")
+
+  a.carousel-control-prev(href='#main-carousel' data-slide='prev')
+    img(src='img/misc-img/prev-arrow-xs.png')
+  a.carousel-control-next(href='#main-carousel' data-slide='next')
+    img(src='img/misc-img/next-arrow-xs.png')
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//.main-carousel
   .slide-1
-    .flex-column.justify-content-between.p-0
+    h1.big-title Tiêu điểm tháng 1
 
-      h1.big-title Tiêu điểm tháng 1
+    .logo-wrapper
+      p.canon-logo Canon
+      p.eos-r EOS R
 
-      .logo-wrapper
-        p.canon-logo Canon
-        p.eos-r EOS R
+    p.size-14 ĐỊNH NGHĨA LẠI CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
 
-      p.size-14 ĐỊNH NGHĨA LẠI CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
+    <button type="button" class="white-btn btn btn-outline-light text-light mx-auto">Xem chi tiết</button>
 
-      <button type="button" class="white-btn btn btn-outline-light text-light mx-auto">Xem chi tiết</button>
-
-      img.banner-xs(src="img/body-img/eos-r-main-banner-xs.png" alt="")
+    img.banner-xs(src="img/body-img/eos-r-main-banner-xs.png" alt="")
 
   .slide-2
     h1.big-title Tiêu điểm tháng 1
