--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -9,8 +9,13 @@ block title
 
 block content 
   include parts/main-carousel.pug
-  h1 Body
 
+  h1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.
+
+  h1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.
+
+  h1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.
+  
 block title
   title Trang chủ
 
