--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -1,9 +1,9 @@
 header
-  nav.navbar.navbar-expand-md.bg-dark.navbar-dark
+  nav.navbar.navbar-expand-md.navbar-dark
     .container.px-4
-      .hamburger-wrapper
-        button.navbar-toggler(type='button' data-toggle='collapse' data-target='#collapsibleNavbar')
-          span.navbar-toggler-icon
+
+      button.navbar-toggler(type='button' data-toggle='collapse' data-target='#collapsibleNavbar' aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation")
+        span.navbar-toggler-icon
 
       a.navbar-brand(href='index.html')
         img(src="img/misc-img/logo-white.png", alt="")
