--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -92,7 +92,7 @@
             | MỘT NGÀM CHO TẤT CẢ
             br
             |  Kết nối mọi thứ với ngàm E-mount của 
-            span.sony-logo SONY
+            span.sony-logo-inline SONY
 
 
           button.white-btn.btn.btn-outline-light.text-light.see-more-btn(type='button') Xem chi tiết
